# mamo-auth-server

./: LICENSE  README.md  pyproject.toml
server/application/: models.py  urls.py  views.py
server/application/migrations/: 0001_initial.py
server/application/templates/application/: information.html  register.html
server/oauth/: models.py  urls.py  views.py
server/server/: settings.py  urls.py
server/user/migrations/: 0001_initial.py
